--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 placeholder="Type your message..." 
             />
             <button
-                class="px-8 py-3 bg-green-500 text-white hover:bg-green-600 transition-colors"
+                class="px-8 py-3 bg-green-500 text-white hover:bg-red-600 transition-colors"
                 onclick="sendMessage()"
             >
                 Send
