--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                 id="message"
                 type="text"
                 class="px-3 w-full border-t border-gray-300 outline-none text-gray-700"
-                placeholder="Type your message..." 
+                placeholder="Type your message new..." 
             />
             <button
                 class="px-8 py-3 bg-green-500 text-white hover:bg-red-600 transition-colors"
                 onclick="sendMessage()"
             >
-                Send
+                Kirim
             </button>
         </div>
     </div>
